@@ -1,4 +1,6 @@
 0.3.1
+Added variable default eg ST=noxfer;STATUS=${STATUS:-"$ST"}.
+Added file tests efdhxrw, and negate (!).
 Done read.
 Fixed assigning curses escape codes to variables.
 Added $#.
